--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="alerterror">
-        <p>Digite somente Números</p>
+        <p>Valor Inválido</p>
     </div>
     <div class="container">
         <main class="card">
